added lectures 9 and 10

--- a/2026/lectures/bibliography.bib
+++ b/2026/lectures/bibliography.bib
@@ -680,3 +680,41 @@ isbn="978-3-030-34175-6"
   address =   {Rome, Italy},
   publisher = {ACM}}
 
+@inproceedings{Schwartz2010,
+ author = {Schwartz, Edward J. and Avgerinos, Thanassis and Brumley, David},
+ title = {All You Ever Wanted to Know About Dynamic Taint Analysis and Forward Symbolic Execution (but Might Have Been Afraid to Ask)},
+ booktitle = {Proceedings of the 2010 IEEE Symposium on Security and Privacy (Oakland)},
+ year = {2010}
+}
+
+@article{Aycock2003,
+ author = {Aycock, John},
+ title = {A Brief History of Just-in-time},
+ journal = {ACM Computing Surveys},
+ volume = {35},
+ number = {2},
+ month = jun,
+ year = {2003},
+ pages = {97--113}
+}
+
+@article{Schneider2000,
+ author = {Schneider, Fred B.},
+ title = {Enforceable Security Policies},
+ journal = {ACM Transactions on Information Systems Secur.},
+ volume = {3},
+ number = {1},
+ month = feb,
+ year = {2000},
+ pages = {30--50}
+}
+
+@InProceedings{Hovav07,
+  author =       {Hovav Shacham},
+  title =        {The Geometry of Innocent Flesh on the Bone:
+                  Return-into-libc without Function Calls (on the
+                  {x86})},
+  booktitle =    {Proceedings of CCS 2007},
+  month =        oct,
+  year =         2007,
+}
